added stone location xml files

--- a/app/src/main/res/layout/fragment_stone_location.xml
+++ b/app/src/main/res/layout/fragment_stone_location.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-
+<LinearLayout
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,105 +9,16 @@
     android:id="@+id/fragment_stone_location"
     tools:context=".StoneLocationFragment">
 
-    <TextView
-        android:id="@+id/location_text"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_margin="8dp"
-        android:textAllCaps="true"
-        android:text="По локализации конкремент справа "
-        android:textStyle="bold"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints" />
+    <include
+        layout="@layout/layout_stone_location_right"/>
 
-    <TextView
-        android:id="@+id/right_upper_calyx_text"
-        app:layout_constraintTop_toTopOf="@id/right_upper_calyx_edit"
-        app:layout_constraintBottom_toBottomOf="@id/right_upper_calyx_edit"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="8dp"
-        android:layout_margin="8dp"
-        android:text="@string/upper_calyx_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints" />
+    <include
+        layout="@layout/layout_stone_location_left"/>
 
-    <EditText
-        android:id="@+id/right_upper_calyx_edit"
-        app:layout_constraintTop_toBottomOf="@id/location_text"
-        android:layout_marginTop="8dp"
-        android:hint="@string/mm"
-        android:maxLength="3"
-        android:inputType="number"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints" />
+    <include
+        layout="@layout/layout_stone_location"/>
 
-    <TextView
-        android:id="@+id/middle_calyx_text"
-        android:text="@string/middle_calyx_text"
-        app:layout_constraintLeft_toLeftOf="@id/right_upper_calyx_text"
-        app:layout_constraintTop_toTopOf="@id/middle_calyx_edit"
-        app:layout_constraintBottom_toBottomOf="@id/middle_calyx_edit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints" />
+    <include
+        layout="@layout/layout_stone_by_clinic"/>
 
-    <EditText
-        android:id="@+id/middle_calyx_edit"
-        android:hint="@string/mm"
-        android:maxLength="3"
-        android:inputType="number"
-        android:layout_width="50dp"
-        app:layout_constraintLeft_toLeftOf="@id/right_upper_calyx_edit"
-        app:layout_constraintTop_toBottomOf="@id/right_upper_calyx_edit"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints" />
-
-    <EditText
-        android:id="@+id/lower_calyx_edit"
-        android:hint="@string/mm"
-        android:maxLength="3"
-        android:inputType="number"
-        app:layout_constraintTop_toBottomOf="@id/middle_calyx_edit"
-        app:layout_constraintLeft_toLeftOf="@id/middle_calyx_edit"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:id="@+id/lower_calyx_text"
-        app:layout_constraintTop_toBottomOf="@id/middle_calyx_text"
-        app:layout_constraintLeft_toLeftOf="@id/middle_calyx_text"
-        app:layout_constraintTop_toTopOf="@id/lower_calyx_edit"
-        app:layout_constraintBottom_toBottomOf="@id/lower_calyx_edit"
-        android:text="@string/lower_calyx_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints" />
-
-    <EditText
-        android:id="@+id/pelvis_edit"
-        android:hint="@string/mm"
-        android:maxLength="3"
-        android:inputType="number"
-        app:layout_constraintLeft_toLeftOf="@id/lower_calyx_edit"
-        app:layout_constraintTop_toBottomOf="@id/lower_calyx_edit"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:id="@+id/pelvis_text"
-        app:layout_constraintTop_toTopOf="@id/pelvis_edit"
-        app:layout_constraintBottom_toBottomOf="@id/pelvis_edit"
-        app:layout_constraintLeft_toLeftOf="@id/lower_calyx_text"
-        android:text="@string/pelvis_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
