added fragment by etiology and setting others fragments to expandable card view

--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -23,22 +23,22 @@
         tools:ignore="MissingConstraints,RtlCompat" />
 
     <com.google.android.material.checkbox.MaterialCheckBox
-        android:id="@+id/stone_in_location_checkbox"
+        android:id="@+id/x_ray_stone_checkbox"
         app:layout_constraintLeft_toLeftOf="@id/choose_category"
         app:layout_constraintRight_toRightOf="@id/choose_category"
         app:layout_constraintTop_toBottomOf="@id/choose_category"
         android:layout_margin="8dp"
-        android:text="По локализации конкремента"
+        android:text="@string/by_x_ray_characteristics_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         tools:ignore="MissingConstraints" />
 
     <com.google.android.material.checkbox.MaterialCheckBox
-        android:id="@+id/x_ray_stone_checkbox"
-        app:layout_constraintTop_toBottomOf="@id/stone_in_location_checkbox"
-        app:layout_constraintLeft_toLeftOf="@id/stone_in_location_checkbox"
-        app:layout_constraintRight_toRightOf="@id/stone_in_location_checkbox"
-        android:text="По рентгенологической характеристике"
+        android:id="@+id/by_etiology_stone_checkbox"
+        app:layout_constraintTop_toBottomOf="@id/x_ray_stone_checkbox"
+        app:layout_constraintLeft_toLeftOf="@id/x_ray_stone_checkbox"
+        app:layout_constraintRight_toRightOf="@id/x_ray_stone_checkbox"
+        android:text="@string/by_etiology_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         tools:ignore="MissingConstraints" />
@@ -47,24 +47,12 @@
     <Button
         android:id="@+id/start_test_button"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="@id/stone_in_location_checkbox"
-        app:layout_constraintRight_toRightOf="@id/stone_in_location_checkbox"
+        app:layout_constraintLeft_toLeftOf="@id/x_ray_stone_checkbox"
+        app:layout_constraintRight_toRightOf="@id/x_ray_stone_checkbox"
         android:layout_marginBottom="8dp"
         android:text="Пройти тест"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         tools:ignore="MissingConstraints" />
-
-<!--    <fragment-->
-<!--        android:id="@+id/fragment"-->
-<!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        app:defaultNavHost="true"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:navGraph="@navigation/location_stone_nav" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
