--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -13,26 +13,20 @@
         android:layout_height="match_parent">
 
         <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/first_fragment_id"
+            android:id="@+id/location_fragment_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
 
         <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/second_fragment_id"
+            android:id="@+id/x_ray_fragment_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-        <!--            <include-->
-<!--                layout="@layout/fragment_stone_location"/>-->
-
-<!--            <include-->
-<!--                layout="@layout/fragment_x_ray_stone"/>-->
-
-<!--            <ListView-->
-<!--                android:id="@+id/list_view"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"/>-->
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/by_etiology_fragment_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
     </LinearLayout>
 
