--- a/app/src/main/res/layout/layout_stone_by_clinic.xml
+++ b/app/src/main/res/layout/layout_stone_by_clinic.xml
@@ -6,55 +6,95 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:id="@+id/by_clinic_text"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/stone_by_clinic_card_view"
+        android:layout_margin="8dp"
+        app:cardCornerRadius="8dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_margin="8dp"
-        android:textAllCaps="true"
-        android:text="@string/by_clinic_text"
-        android:textStyle="bold"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints">
 
-    <com.google.android.material.checkbox.MaterialCheckBox
-        android:id="@+id/primary_checkbox"
-        app:layout_constraintTop_toBottomOf="@id/by_clinic_text"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_margin="8dp"
-        android:text="@string/primary_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <com.google.android.material.checkbox.MaterialCheckBox
-        android:id="@+id/recurrent_checkbox"
-        android:text="@string/recurrent_text"
-        app:layout_constraintTop_toBottomOf="@id/primary_checkbox"
-        app:layout_constraintLeft_toLeftOf="@id/primary_checkbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints" />
+            <TextView
+                android:id="@+id/by_clinic_text"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_margin="8dp"
+                android:textAllCaps="true"
+                android:text="@string/by_clinic_text"
+                android:textStyle="bold"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                tools:ignore="MissingConstraints" />
 
-    <com.google.android.material.checkbox.MaterialCheckBox
-        android:id="@+id/infected_checkbox"
-        android:text="@string/infected_text"
-        app:layout_constraintTop_toBottomOf="@id/recurrent_checkbox"
-        app:layout_constraintLeft_toLeftOf="@id/recurrent_checkbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints" />
+            <ImageView
+                android:id="@+id/stone_by_clinic_button"
+                android:background="@drawable/ic_arrow_down"
+                app:layout_constraintTop_toTopOf="@id/by_clinic_text"
+                app:layout_constraintBottom_toBottomOf="@id/by_clinic_text"
+                app:layout_constraintRight_toRightOf="parent"
+                android:padding="8dp"
+                android:layout_width="35dp"
+                android:layout_height="35dp"/>
 
-    <com.google.android.material.checkbox.MaterialCheckBox
-        android:id="@+id/not_infected_checkbox"
-        app:layout_constraintTop_toBottomOf="@id/infected_checkbox"
-        app:layout_constraintLeft_toLeftOf="@id/infected_checkbox"
-        android:text="@string/not_infected_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/stone_by_clinic_layout"
+                android:visibility="gone"
+                app:layout_constraintTop_toBottomOf="@id/stone_by_clinic_button"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
+                <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/primary_checkbox"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:layout_margin="8dp"
+                    android:text="@string/primary_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:ignore="MissingConstraints" />
+
+                <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/recurrent_checkbox"
+                    android:text="@string/recurrent_text"
+                    app:layout_constraintTop_toBottomOf="@id/primary_checkbox"
+                    app:layout_constraintLeft_toLeftOf="@id/primary_checkbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:ignore="MissingConstraints" />
+
+                <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/infected_checkbox"
+                    android:text="@string/infected_text"
+                    app:layout_constraintTop_toBottomOf="@id/recurrent_checkbox"
+                    app:layout_constraintLeft_toLeftOf="@id/recurrent_checkbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:ignore="MissingConstraints" />
+
+                <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/not_infected_checkbox"
+                    app:layout_constraintTop_toBottomOf="@id/infected_checkbox"
+                    app:layout_constraintLeft_toLeftOf="@id/infected_checkbox"
+                    android:text="@string/not_infected_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:ignore="MissingConstraints" />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
