--- a/app/src/main/res/layout/fragment_x_ray_stone.xml
+++ b/app/src/main/res/layout/fragment_x_ray_stone.xml
@@ -1,18 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.XRayStoneFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-
+    <androidx.cardview.widget.CardView
+        android:id="@+id/x_ray_stone_card"
+        android:layout_margin="8dp"
+        app:cardCornerRadius="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textColor="@color/black"
-        android:padding="16dp"
-        android:text="По рентгелогической характеристике" />
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints">
 
-</FrameLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/x_ray_stone_text"
+                android:layout_margin="8dp"
+                android:textStyle="bold"
+                android:text="@string/by_x_ray_characteristics_text"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+
+            <ImageView
+                android:id="@+id/x_ray_stone_image"
+                app:layout_constraintTop_toTopOf="@id/x_ray_stone_text"
+                app:layout_constraintBottom_toBottomOf="@id/x_ray_stone_text"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginLeft="8dp"
+                android:background="@drawable/ic_arrow_down"
+                android:layout_width="35dp"
+                android:layout_height="35dp"/>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:visibility="gone"
+                android:id="@+id/by_x_ray_characteristics_layout"
+                app:layout_constraintTop_toBottomOf="@id/x_ray_stone_image"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <include
+                    layout="@layout/layout_x_ray_contrast_stone"/>
+
+                <include
+                    layout="@layout/layout_low_radiopacity"/>
+
+                <include
+                    layout="@layout/layout_x_ray_negative_calculus"/>
+
+            </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
