--- a/app/src/main/res/layout/activity_sub_category.xml
+++ b/app/src/main/res/layout/activity_sub_category.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".sub_category.SubCategoryActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/rv"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
