--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -8,9 +8,24 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_questions"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/result_button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/result_button"
+        app:layout_constraintTop_toBottomOf="@id/rv_questions"
+        app:layout_constraintLeft_toLeftOf="@id/rv_questions"
+        app:layout_constraintRight_toRightOf="@id/rv_questions"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="8dp"
+        android:text="@string/result_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
